--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ nav{
     left: 0;
     top: 0;
     box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.5);
-    z-index: 10;
+    z-index: 1;
 }
 
 .nav-link:hover{
@@ -24,7 +24,7 @@ nav{
 
 /* Start Banner Section */
 .banners{
-    height: 100vh;
+    height: 80vh;
 
     background-color: #f2aa4caf;
 
@@ -32,12 +32,27 @@ nav{
     justify-content: center;
     align-items: center;
 }
+
+#home img{
+    width: 400px;
+}
+@media screen and (max-width:1000px) {
+    #home img{
+        width: 300px;
+    }
+}
+
+@media screen and (max-width:900px) {
+    #home img{
+        width: 200px;
+    }
+}
 /* End Banner Section */
 
 /* Start About Section */
 .about{
     background-color: skyblue;
-    height: 60vh;
+    min-height: 60vh;
 }
 /* End About */
 
@@ -45,11 +60,6 @@ nav{
 .skills{
     padding-top: 10px;
     background: #f2aa4caf;
-}
-
-.skills .container{
-    margin-top: 2%;
-    /* margin-bottom: 6%; */
 }
 
 label{
@@ -77,7 +87,7 @@ label{
 }
 
 .carousel{
-    width: 80%;
+    width: 100%;
     height: 80vh;
     background-color: lightblue;
     box-shadow: 10px 20px 10px  rgba(0, 0, 0, 0.4);
@@ -103,8 +113,7 @@ iframe{
 
 /* Start Contact Section */
 .contact{
-    padding-top: 5%;
-    padding-bottom: 4%;
+    padding-bottom: 1%; 
     background-color: skyblue;
 }
 
